<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorMain"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".activity.MoviePageActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:background="@color/colorMain"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back"
                android:padding="15dp"
                android:layout_width="50dp"
                android:src="@drawable/ic_arrow"
                android:layout_height="match_parent"
                android:contentDescription="@string/back_arrow"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:textSize="18sp"
                android:textStyle="bold"
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/back"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:scrollbars="none"
        android:fillViewport="true"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/movie_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/movie_backdrop"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:padding="8dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:id="@+id/movie_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"
                    android:background="@drawable/bg_rating"
                    app:layout_constraintEnd_toEndOf="@id/movie_backdrop"
                    app:layout_constraintBottom_toBottomOf="@id/movie_backdrop"/>

                <TextView
                    android:id="@+id/movie_tagline"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:textColor="@color/white"
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/movie_backdrop"/>

                <TextView
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:id="@+id/release_date"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/white"
                    android:layout_marginStart="15dp"
                    android:text="@string/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movie_tagline"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_marginTop="17.5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:id="@+id/movie_release_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/release_date"
                    app:layout_constraintTop_toBottomOf="@id/movie_tagline"/>

                <TextView
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:id="@+id/budget"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/white"
                    android:layout_marginStart="15dp"
                    android:text="@string/budget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/release_date"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_marginTop="17.5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:id="@+id/movie_budget"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/budget"
                    app:layout_constraintTop_toBottomOf="@id/release_date"/>

                <TextView
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:id="@+id/overview"
                    android:text="@string/overview"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/budget"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/white"
                    android:id="@+id/movie_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/overview"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>